# helmetguard-ai

./: .env.example  .gitignore  Makefile  README.md  architechture.md  idea.md  implementation-checklist.md  pyproject.toml  restart.sh  setup.sh  stop.sh
api/: Dockerfile
api/app/: main.py
api/app/db/: init_db.py  models.py  session.py
api/app/routes/: health.py  jobs.py  web.py
api/app/schemas/: jobs.py
api/app/services/: job_service.py  queue.py  storage.py
api/app/templates/: index.html  results.html
infra/compose/: docker-compose.yml
scripts/: benchmark.py  bootstrap.sh
shared/: config.py
shared/contracts/: __init__.py  job_payload.py
tests/integration/: test_health.py
tests/unit/: test_benchmark.py  test_contracts.py
worker/: Dockerfile
worker/app/: main.py
worker/app/pipeline/: __init__.py  analyzer.py  detector.py  geometry.py  ocr.py  tracker.py  types.py
worker/app/tasks/: process_job.py
