[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helmetguard-ai"
version = "0.1.0"
description = "Upload-first helmet violation analysis platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
]

[project.optional-dependencies]
vision = [
  "opencv-python>=4.10.0.84",
  "numpy>=1.26.4",
  "ultralytics>=8.3.0",
  "paddleocr>=2.8.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = ["api", "worker", "shared"]
